[gd_scene load_steps=28 format=2]

[ext_resource path="res://MainScript.gd" type="Script" id=1]
[ext_resource path="res://map/MidWorld.jpg" type="Texture" id=2]
[ext_resource path="res://characters/kheir/kheir2.png" type="Texture" id=3]
[ext_resource path="res://characters/kheir/kheir3.png" type="Texture" id=4]
[ext_resource path="res://characters/kheir/kheir.png" type="Texture" id=5]
[ext_resource path="res://characters/shar/shar1.png" type="Texture" id=6]
[ext_resource path="res://characters/shar/shar2.png" type="Texture" id=7]
[ext_resource path="res://buttons/ability1.png" type="Texture" id=8]
[ext_resource path="res://Effect/Thunder.jpg" type="Texture" id=9]
[ext_resource path="res://buttons/ILostBTN.png" type="Texture" id=10]
[ext_resource path="res://SCRIPTBL.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://Effect/LightEffect.png" type="Texture" id=12]
[ext_resource path="res://Effect/fire/fire.jpg" type="Texture" id=13]
[ext_resource path="res://Effect/dark_wood/dark_wood.jpg" type="Texture" id=14]
[ext_resource path="res://sounds/wind.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/thunder.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/hide.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/fire.wav" type="AudioStream" id=18]
[ext_resource path="res://sounds/invert.wav" type="AudioStream" id=19]
[ext_resource path="res://sounds/woods.wav" type="AudioStream" id=20]
[ext_resource path="res://sounds/thief.wav" type="AudioStream" id=21]
[ext_resource path="res://sounds/ILost-Soundtrack1.mp3" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Kheir_animation",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 0.639216, 0.137255, 0.137255, 1 )
font_data = ExtResource( 11 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BarzakhWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 944.0
margin_bottom = 480.0
use_top_left = true

[node name="MidWorld" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 592.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="LightEffect" type="TextureRect" parent="."]
visible = false
margin_left = 184.0
margin_top = 288.0
margin_right = 248.0
margin_bottom = 352.0
texture = ExtResource( 12 )

[node name="LightEffect_Timer" type="Timer" parent="LightEffect"]
wait_time = 0.05

[node name="LE_destroyer_timer" type="Timer" parent="LightEffect"]
wait_time = 3.0

[node name="Kheir" type="AnimatedSprite" parent="."]
position = Vector2( 292.601, 210.033 )
scale = Vector2( 0.580159, 0.580159 )
frames = SubResource( 1 )
animation = "Kheir_animation"
frame = 2
playing = true
offset = Vector2( -82.6948, 99.1559 )

[node name="Kheir_Child1" type="AnimatedSprite" parent="Kheir"]
position = Vector2( 93.507, 187.013 )
scale = Vector2( 0.494, 0.494 )
frames = SubResource( 1 )
animation = "Kheir_animation"
frame = 1
playing = true
offset = Vector2( -24.5185, 35.8972 )
flip_h = true

[node name="Kheir_Child2" type="AnimatedSprite" parent="Kheir"]
position = Vector2( 243.117, 187.013 )
scale = Vector2( 0.494426, 0.494426 )
frames = SubResource( 1 )
animation = "Kheir_animation"
frame = 2
playing = true
offset = Vector2( -24.5185, 35.8972 )

[node name="Wind_audio" type="AudioStreamPlayer2D" parent="Kheir"]
stream = ExtResource( 15 )

[node name="thunder_audio" type="AudioStreamPlayer2D" parent="Kheir"]
stream = ExtResource( 16 )

[node name="hide_audio" type="AudioStreamPlayer2D" parent="Kheir"]
stream = ExtResource( 17 )

[node name="Shar" type="AnimatedSprite" parent="."]
position = Vector2( 840.375, 230.066 )
scale = Vector2( 0.727193, 0.727193 )
frames = SubResource( 2 )
playing = true
flip_h = true

[node name="Random_Ability_Timer" type="Timer" parent="Shar"]
wait_time = 1.5

[node name="Shar_Invert_Timer" type="Timer" parent="Shar"]
wait_time = 2.0

[node name="fire_audio" type="AudioStreamPlayer2D" parent="Shar"]
stream = ExtResource( 18 )

[node name="invert_audio" type="AudioStreamPlayer2D" parent="Shar"]
stream = ExtResource( 19 )

[node name="Wood_audio" type="AudioStreamPlayer2D" parent="Shar"]
stream = ExtResource( 20 )

[node name="thief_audio" type="AudioStreamPlayer2D" parent="Shar"]
stream = ExtResource( 21 )

[node name="Ability_Hide" type="TouchScreenButton" parent="."]
position = Vector2( 24, 416 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 8 )
action = "Kheir_Ability_Hide"

[node name="Ability_Hide_timer" type="Timer" parent="Ability_Hide"]
wait_time = 2.7

[node name="Ability_hide_usable_timer" type="Timer" parent="Ability_Hide"]
wait_time = 4.0

[node name="Ability_Thunder" type="TouchScreenButton" parent="."]
position = Vector2( 848, 432 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 8 )
action = "Kheir_Ability_Thunder"

[node name="Ability_Thunder_Timer" type="Timer" parent="Ability_Thunder"]
wait_time = 0.3

[node name="Ability_Thunder_btn_Timer" type="Timer" parent="Ability_Thunder"]
wait_time = 3.0

[node name="Ability_LightEffect" type="TouchScreenButton" parent="."]
position = Vector2( 192, 415 )
scale = Vector2( 0.3, 0.3 )
normal = ExtResource( 8 )
action = "Kheir_Ability_LightEffect"

[node name="Damage_Done" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 312.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )

[node name="Damage_Recevied" type="Label" parent="."]
margin_left = 352.0
margin_top = 24.0
margin_right = 640.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )

[node name="I_Lost" type="TouchScreenButton" parent="."]
position = Vector2( 776, 24 )
scale = Vector2( 0.53202, 0.172414 )
normal = ExtResource( 10 )

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 240, 304 )
scale = Vector2( 0.62, 0.62 )
frames = SubResource( 4 )

[node name="Fire_Destroy_Timer" type="Timer" parent="Fire"]
wait_time = 1.5

[node name="DarkWood" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 242, 305 )
scale = Vector2( 0.62, 0.62 )
frames = SubResource( 5 )

[node name="DarkWood_Destroy_Timer" type="Timer" parent="DarkWood"]
wait_time = 2.0

[node name="Unbound_Child1" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 760, 432 )
scale = Vector2( 0.254, 0.254 )
normal = ExtResource( 5 )

[node name="Unbound_Child2" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 674, 432 )
scale = Vector2( 0.253968, 0.253968 )
normal = ExtResource( 5 )

[node name="Thunder" type="TextureRect" parent="."]
visible = false
margin_left = 6.10352e-05
margin_top = 6.10352e-05
margin_right = 1980.0
margin_bottom = 1080.0
texture = ExtResource( 9 )
stretch_mode = 7

[node name="SoundTrackPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
autoplay = true

[connection signal="timeout" from="LightEffect/LightEffect_Timer" to="." method="_on_LightEffect_Timer_timeout"]
[connection signal="timeout" from="LightEffect/LE_destroyer_timer" to="." method="_on_LE_destroyer_timer_timeout"]
[connection signal="timeout" from="Shar/Random_Ability_Timer" to="." method="_on_Random_Ability_Timer_timeout"]
[connection signal="timeout" from="Shar/Shar_Invert_Timer" to="." method="_on_Shar_Invert_Timer_timeout"]
[connection signal="pressed" from="Ability_Hide" to="." method="_on_Ability_Hide_pressed"]
[connection signal="timeout" from="Ability_Hide/Ability_Hide_timer" to="." method="_on_Ability_Hide_timer_timeout"]
[connection signal="timeout" from="Ability_Hide/Ability_hide_usable_timer" to="." method="_on_Ability_hide_usable_timer_timeout"]
[connection signal="pressed" from="Ability_Thunder" to="." method="_on_Ability_Thunder_pressed"]
[connection signal="timeout" from="Ability_Thunder/Ability_Thunder_Timer" to="." method="_on_Ability_Thunder_Timer_timeout"]
[connection signal="timeout" from="Ability_Thunder/Ability_Thunder_btn_Timer" to="." method="_on_Ability_Thunder_btn_Timer_timeout"]
[connection signal="pressed" from="Ability_LightEffect" to="." method="_on_Ability_LightEffect_pressed"]
[connection signal="pressed" from="I_Lost" to="." method="_on_I_Lost_pressed"]
[connection signal="timeout" from="Fire/Fire_Destroy_Timer" to="." method="_on_Fire_Destroy_Timer_timeout"]
[connection signal="timeout" from="DarkWood/DarkWood_Destroy_Timer" to="." method="_on_DarkWood_Destroy_Timer_timeout"]
[connection signal="pressed" from="Unbound_Child1" to="." method="_on_Unbound_Child1_pressed"]
[connection signal="pressed" from="Unbound_Child2" to="." method="_on_Unbound_Child2_pressed"]
